Update with latest Java / Gluon support